# lvgl_new

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/DS3231/: ds3231.c  ds3231.h
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h
components/BSP/RGB/: ws2812b.c  ws2812b.h
components/BSP/SPI/: spi.c  spi.h
components/BSP/ai_chat/: ai_chat.c  ai_chat.h  ai_chat_secrets.h  ai_demo_task.c  ai_demo_task.h
components/BSP/bat_percent/: bat_percent.c  bat_percent.h
components/BSP/ble/: bsp_ble.c  bsp_ble.h
components/BSP/buzzer/: buzzer.c  buzzer.h
components/BSP/encoder/: ec06.c  ec06.h
components/BSP/keypad/: keypad.c  keypad.h
components/BSP/wifi/: wifi.c  wifi.h
components/BSP/word_storage/: word_storage.c  word_storage.h
components/lv_port/: CMakeLists.txt  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h  lv_tick.c  lv_tick.h
components/lvgl/src/: lv_conf.h
components/ui_custom/: CMakeLists.txt
components/ui_custom/custom/: custom.c  custom.h  lv_conf_ext.h
data/: CET4.csv  IELTS.csv  TOEFL.csv  todolist.csv
font_library/: lv_font_AdobeFangsongStdRegular_16.c  lv_font_arial_14.c
main/: CMakeLists.txt  main.c
